service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gdprdsar-tool
  namespace: production
spec:
  selector:
    app: gdprdsar-tool
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  type: ClusterIP
